kubernetes/archive/vpn/vpn-gateway/app/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: downloads-gateway-pod-gateway
  namespace: vpn
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-gateway
      app.kubernetes.io/name: pod-gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 51820
          protocol: UDP
    - to:
        - namespaceSelector: {}
